add router sample

--- a/playground/event-emit.html
+++ b/playground/event-emit.html
@@ -33,7 +33,7 @@
             props: ['count']
         }
 
-        new Vue({
+        var vm = new Vue({
             el: '#app',
             components: {
                 'app-header': appHeader,
