Added TabView sample

--- a/vanilla-search/index.html
+++ b/vanilla-search/index.html
@@ -20,6 +20,10 @@
             </form>
 
             <div class="content">
+                <ul id="tabs" class="tabs">
+                    <li id="recommend">추천 검색어</li>
+                    <li id="recently">최근 검색어</li>
+                </ul>
                 <div id="search-result"></div>
             </div>
         </div>
