Added recommended keyword

--- a/vanilla-search/index.html
+++ b/vanilla-search/index.html
@@ -24,6 +24,7 @@
                     <li id="recommend">추천 검색어</li>
                     <li id="recently">최근 검색어</li>
                 </ul>
+                <div id="search-keyword"></div>
                 <div id="search-result"></div>
             </div>
         </div>
