--- a/vanilla-search/index.html
+++ b/vanilla-search/index.html
@@ -25,6 +25,7 @@
                     <li id="recently">최근 검색어</li>
                 </ul>
                 <div id="search-keyword"></div>
+                <div id="search-history"></div>
                 <div id="search-result"></div>
             </div>
         </div>
