--- a/vue-search/index.html
+++ b/vue-search/index.html
@@ -19,6 +19,34 @@
                 <input v-model="query" @keyup="onKeyup" type="text" placeholder="검색어를 입력하세요" autofocus>
                 <button v-show="query.length" @click="onReset" type="reset" class="btn-reset"></button>
             </form>
+
+            <div v-if="submited">
+                <div v-if="searchResult.length">
+                    <ul>
+                        <li v-for="item in searchResult">
+                            <img :src="item.image" alt="">
+                            {{item.name}}
+                        </li>
+                    </ul>
+                </div>
+                <div v-else>
+                    {{query}} 검색어로 찾을 수 없습니다.
+                </div>
+            </div>
+
+            <div v-else>
+                <ul class="tabs">
+                    <li v-for="tab in tabs" :class="{active: tab === selectedTab}" @click.prevent="onClickTab(tab)">
+                        {{tab}}
+                    </li>
+                </ul>
+                <div v-if="selectedTab === tabs[0]">
+                    {{selectedTab}}
+                </div>
+                <div v-else>
+                    {{selectedTab}}
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://unpkg.com/vue"></script>
