--- a/vue-search/index.html
+++ b/vue-search/index.html
@@ -46,6 +46,11 @@
                 <div v-else>
                     {{selectedTab}}
                 </div>
+                <div>
+                    <ul class="list">
+                        <li v-for=""></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
